Add Three State Button and use it for the add location action

--- a/angular.json
+++ b/angular.json
@@ -97,7 +97,7 @@
       }
     },
     "ng-weather-e2e": {
-      "root": "",
+      "root": "e2e",
       "sourceRoot": "",
       "projectType": "application",
       "architect": {
