--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser-dynamic": "^9.0.5",
     "@angular/pwa": "^0.6.8",
     "@angular/router": "^9.0.5",
+    "@angular-devkit/schematics": "^9.1.0",
     "@angular/service-worker": "9.0.5",
+    "@schematics/angular": "^9.0.5",
     "body-parser": "^1.19.0",
     "bootstrap": "^3.4.1",
     "core-js": "^2.6.9",
